--- a/index.Rmd
+++ b/index.Rmd
@@ -7,59 +7,101 @@ output:
         toc_float: TRUE
 ---
 
+<br>
 
 This is my PM566 Final Project website.
 
+Introduction: 
+In the United States, more than half of the total dietary energy consumption has been composed by ultra-processed foods (UPFs). Most UPFs are calorie-dense and high in sugar, salt, and unhealthy fats, while low in protein, vitamins, and minerals. Studies have demonstrated that the increased consumption of UPFs could result in a poor nutritional quality of the overall diet and high chances of developing chronic diseases. Therefore, the aim of the study focuses on exploring the association between UPF consumption and type 2 diabetes (T2DM) and obesity among youth. 
 
-#Setup
-```{r, setup, message=FALSE, echo=FALSE, warning=FALSE}
+<br>
+
+```{r setup, message=FALSE, echo=FALSE, warning=FALSE}
 library(readxl)
 library(plyr)
 library(dplyr)
 library(skimr)
 library(ggplot2)
 library(plotly)
-library(data.table)
+library(knitr)
+
+opts_chunk$set(
+  warning = FALSE,
+  message = FALSE,
+  eval=TRUE,
+  echo = TRUE,
+  cache = FALSE,
+  fig.width = 7, 
+  fig.align = 'center',
+  fig.asp = 0.618,
+  out.width = "700px",
+  class.source = "code-r")
 ```
 
-#Run Data
-```{r, setup, message=FALSE, echo=FALSE, warning=FALSE}
-# Initialize code chunk options
+```{css, echo = FALSE}
+.code-r { /* Code block */
+  font-size: 15px;
+}
 
-#error below
-
-#opts_chunk$set(
-#  warning = FALSE,
-#  message = FALSE,
-#  eval=TRUE,
-#  echo = TRUE,
-#  cache = FALSE,
-#  fig.width = 7, 
-#  fig.align = 'center',
-#  fig.asp = 0.618,
-#  out.width = "700px")
+.code-r-small { /* Code block */
+  font-size: 10px;
+}
 ```
 
-```{r}
+<br>
+
+## First Step
+
+Firstly, I sourced codes from "Midterm.R"
+
+```{r load-data}
 source("Midterm.R")
-
-
-
 ```
 
+<br>
 
-#Display Interactive Figures
-```{r, echo=FALSE}
-## Showcasing plots {.tabset}
-### Tab 1
+## Second Step
 
-p1_scatter #<name of the plot>
+Secondly, I used the function plotly in order to sho figures
 
-### Tab 2
-p2_scatter #<name of the plot>
+```{r fig1 to fig3}
+fig1 <- 
+ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) + 
+  geom_point() +
+  labs(title = "Fig1: Scatterplot of UPF vs. BMI", x = "UPF%", y = "BMI")
+ggplotly(fig1)
 
-### Tab 3
-p3_scatter #<name of the plot>
+fig2 <- 
+ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
+  geom_point() +
+  labs(title = "Fig2: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose")
+ggplotly(fig2)
+
+fig3 <- 
+ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_120min)) + 
+  geom_point() +
+  labs(title = "Fig3: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes")
+ggplotly(fig3)
 ```
 
+<br>
+
+## Third Step {.tabset}
+
+Create tabs to display each figure
+
+### Fig1
+```{r fig1}
+fig1
+```
+
+### Fig2
+```{r fig2}
+fig2
+```
+
+### Fig3
+```{r fig3}
+fig3
+```
 
