--- a/hw5.Rmd
+++ b/hw5.Rmd
@@ -6,3 +6,104 @@ output:
         toc: TRUE
         toc_float: TRUE
 ---
+
+<br>
+
+This is my PM566 Final Project website. Homework 5 is shortened part of it. 
+
+The pdf version of the Final Project can be found at: https://github.com/marylee513/pm566_final_project/blob/main/PM566%20Final%20Project.pdf
+
+Introduction: 
+In the United States, more than half of the total dietary energy consumption has been composed by ultra-processed foods (UPFs). Most UPFs are calorie-dense and high in sugar, salt, and unhealthy fats, while low in protein, vitamins, and minerals. Studies have demonstrated that the increased consumption of UPFs could result in a poor nutritional quality of the overall diet and high chances of developing chronic diseases. Therefore, the aim of the study focuses on exploring the association between UPF consumption and type 2 diabetes (T2DM) and obesity among youth. 
+
+<br>
+
+```{r setup, message=FALSE, echo=FALSE, warning=FALSE}
+library(readxl)
+library(plyr)
+library(dplyr)
+library(skimr)
+library(ggplot2)
+library(plotly)
+library(knitr)
+
+opts_chunk$set(
+  warning = FALSE,
+  message = FALSE,
+  eval=TRUE,
+  echo = TRUE,
+  cache = FALSE,
+  fig.width = 7, 
+  fig.align = 'center',
+  fig.asp = 0.618,
+  out.width = "700px",
+  class.source = "code-r")
+```
+
+```{css, echo = FALSE}
+.code-r { /* Code block */
+  font-size: 15px;
+}
+
+.code-r-small { /* Code block */
+  font-size: 10px;
+}
+```
+
+<br>
+
+## First Step
+
+Firstly, I sourced codes from "Midterm.R".
+
+```{r load-data}
+source("Midterm.R")
+```
+
+<br>
+
+## Second Step
+
+Secondly, I copied and pasted codes needed from source.
+
+```{r fig1 to fig3}
+fig1 <- 
+ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) + 
+  geom_point() +
+  labs(title = "Fig1: Scatterplot of UPF vs. BMI", x = "UPF%", y = "BMI")
+
+fig2 <- 
+ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
+  geom_point() +
+  labs(title = "Fig2: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose")
+
+fig3 <- 
+ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_120min)) + 
+  geom_point() +
+  labs(title = "Fig3: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes")
+```
+
+<br>
+
+## Third Step {.tabset}
+
+I created tabs to display each figure using function ggplotly.
+
+Figure 1 to 3 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. None of the plots show a trend of UPF% on those variables interested in. 
+
+### Fig1
+```{r fig1}
+ggplotly(fig1)
+```
+
+### Fig2
+```{r fig2}
+ggplotly(fig2)
+```
+
+### Fig3
+```{r fig3}
+ggplotly(fig3)
+```
+
+## {-}
