--- a/Midterm.Rmd
+++ b/Midterm.Rmd
@@ -47,7 +47,7 @@ vars$UPF_quart <- cut(vars$UPFpercentage_mean,
                           labels=c("1", "2", "3", "4"))
 
 vars$UPF_cat <- cut(vars$UPFpercentage_mean,
-                             breaks=c(0, 75, 100),
+                             breaks=c(0, 50, 100),
                              labels=c("0", "1"))
 
 ```
@@ -106,7 +106,7 @@ table1 <- vars %>%
     Gluc_Fasting_min = min(Gluc_Fasting),
     Gluc_Fasting_max = max(Gluc_Fasting),
     Gluc_120min_min = min(Gluc_120min),
-    GLuc_120min_max = max(Gluc_120min),
+    Gluc_120min_max = max(Gluc_120min),
     Gluc_num = n(),
   )
 knitr::kable(table1)
@@ -169,8 +169,13 @@ ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) +
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_point() +
-  labs(title = "Fig2: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose") + 
+  labs(title = "Fig3: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose") + 
   geom_smooth(method = lm, se = FALSE)
+
+ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
+  geom_line () +
+  geom_smooth () +
+  labs(title = "Fig4: Smooth the lineplot of UPF vs. Fasting Glucose", x = "UPF%", y = "BMI") 
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_120min)) + 
   geom_point() +
