--- a/Midterm.Rmd
+++ b/Midterm.Rmd
@@ -65,6 +65,12 @@ names(vars)[9] <- "Gluc_120min"
 names(vars)[10] <- "HbA1C"
 ```
 
+```{r, data wrangling: rename sex categories}
+vars$Male <- as.factor(vars$Male)
+vars$Male <- revalue(vars$Male, c("0" = "Female", "1" = "Male"))
+```
+
+
 Participants with missing values in T2DM or fasting glucose or blood glucose after 120 minutes were excluded. Participants with implausible fasting glucose of greater than 200 mg/dL and glucose after 120 minutes of greater than 400 mg/dL were also excluded. 
 
 ```{r, EDA, check for missing values, T2DM related all contain 1 missing variable, get rid of 1 outlier}
@@ -152,7 +158,7 @@ table4 <- vars %>%
 knitr::kable(table4)
 ```
 
-Figure 1 to 3 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. None of the plots show a trend of UPF% on those variables interested in. 
+Figure 1 to 6 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. None of the plots show a trend of UPF% on those variables interested in. 
 
 ```{r, scatterplots and smoothed slineplots of UPF_cont vs BMI_cont, Gluc_Fasting, Gluc_120min}
 
@@ -178,48 +184,54 @@ ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) +
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_120min)) + 
   geom_point() +
-  labs(title = "Fig3: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") +
+  labs(title = "Fig5: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") +
   geom_smooth(method = lm, se = FALSE)
+
+ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
+  geom_line () +
+  geom_smooth () +
+  labs(title = "Fig6: Smooth the lineplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") 
+
 ```
 
-Figure 4 fasting glucose by UPF quartiles shows that most subjects consumed 0-25% UPF and the second most subjects consumed 25-50% UPF. However, both UPF amounts consumption show no pattern for fasting flucose, which is also not normally distributed. This figure does not show any association between fasting glucose and UPF consumption. 
+Figure 7 fasting glucose by UPF quartiles shows that most subjects consumed 0-25% UPF and the second most subjects consumed 25-50% UPF. However, both UPF amounts consumption show no pattern for fasting flucose, which is also not normally distributed. This figure does not show any association between fasting glucose and UPF consumption. 
 
-Figure 5 Blood Glucose after 120 minutes shows that subjects consumed 0-25% and 25-50% UPF are almost normally distributed for their blood glucose level after 120 minutes. However, this figure also shows no association between blood glucose after 120 minutes and UPF consumption. 
+Figure 8 Blood Glucose after 120 minutes shows that subjects consumed 0-25% and 25-50% UPF are almost normally distributed for their blood glucose level after 120 minutes. However, this figure also shows no association between blood glucose after 120 minutes and UPF consumption. 
 
 ```{r, histogram, glu-fasting/120mins by UPF_quart}
 vars %>%
-  ggplot(aes(x = Gluc_Fasting, fill = UPF_quart)) +
+  ggplot(aes(x = Gluc_Fasting, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig4: Fasting Glucose by UPF Quartiles", x = "Fasting Glucose", fill = "UPF")
+  labs(title = "Fig7: Fasting Glucose by Sex", x = "Fasting Glucose", fill = "Sex")
 
 vars %>%
-  ggplot(aes(x = Gluc_120min, fill = UPF_quart)) +
+  ggplot(aes(x = Gluc_120min, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig5: Blood Glucose after 120mins by UPF Quartiles", x = "Blood Glucose after 120mins", fill = "UPF")
+  labs(title = "Fig8: Blood Glucose after 120mins by Sex", x = "Blood Glucose after 120mins", fill = "Sex")
   
 ```
 
-Figure 6 BMI by UPF consumption shows that subjects who consumed 0-25% UPF had a pattern with right skewed, while subjects who comsumed greater than 25% UPF showed no specific pattern. 
+Figure 9 BMI by UPF consumption shows that subjects who consumed 0-25% UPF had a pattern with right skewed, while subjects who comsumed greater than 25% UPF showed no specific pattern. 
 
 ```{r, histogram, BMI by UPF quartiles }
 vars %>%
-  ggplot(aes(x = BMI_cont, fill = UPF_quart)) +
+  ggplot(aes(x = BMI_cont, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig6: BMI by UPF Quartiles", x = "BMI", fill = "UPF")
+  labs(title = "Fig9: BMI by Sex", x = "BMI", fill = "Sex")
   
 ```
 
-The barchart Figure 7 shows in another way that most subjects consumed low amount of UPFs were either overweight or obese. 
+The barchart Figure 10 shows in another way that most subjects consumed low amount of UPFs were either overweight or obese. 
 
 ```{r, barchart, UPF_BMI by UPF_quart, cont}
 vars %>%
   ggplot(aes(x = UPF_BMI, fill = UPF_quart)) +
   geom_bar() +
-  labs(title = "Fig7: UPF binary and BMI combined by UPF Quartile", x = "UPF_BMI", fill = "UPF Quartile")
+  labs(title = "Fig10: UPF binary and BMI combined by UPF Quartile", x = "UPF_BMI", fill = "UPF Quartile")
 
 ```
 
-Figure 8 to Figure 11 are the statistical summary graphs of fasting glucose or blood glucose after 120 minutes by UPF quartiles of BMI. 
+Figure 11 to Figure 14 are the statistical summary graphs of fasting glucose or blood glucose after 120 minutes by UPF quartiles of BMI. 
 
 ```{r, statistical summary graph, glu-fasting/120mins by UPF_quart and BMI}
 vars %>%
@@ -228,7 +240,7 @@ vars %>%
                fun.min = min,
                fun.max = max, 
                fun = median) + 
-  labs(title = "Fig8: Statistical Summary of Fasting GLucose by UPF Quartiles", x = "UPF Quartiles", y = "Fasting Glucose")
+  labs(title = "Fig11: Statistical Summary of Fasting GLucose by UPF Quartiles", x = "UPF Quartiles", y = "Fasting Glucose")
 
 vars %>%
   ggplot() +
@@ -236,7 +248,7 @@ vars %>%
                fun.min = min,
                fun.max = max, 
                fun = median) + 
-  labs(title = "Fig9: Statistical Summary of Fasting GLucose by UPF Quartiles", x = "UPF Quartiles", y = "Glucose after 120mins")
+  labs(title = "Fig12: Statistical Summary of Glucose after 120mins by UPF Quartiles", x = "UPF Quartiles", y = "Glucose after 120mins")
 
 vars %>%
   ggplot() +
@@ -244,7 +256,7 @@ vars %>%
                fun.min = min,
                fun.max = max, 
                fun = median) + 
-  labs(title = "Fig10: Statistical Summary of Fasting GLucose by UPF Quartiles", x = "BMI", y = "Fasting Glucose")
+  labs(title = "Fig13: Statistical Summary of Fasting GLucose by BMI Categories", x = "BMI", y = "Fasting Glucose")
 
 vars %>%
   ggplot() +
@@ -252,8 +264,9 @@ vars %>%
                fun.min = min,
                fun.max = max, 
                fun = median) + 
-  labs(title = "Fig11: Statistical Summary of Fasting Glucose by UPF Quartiles", x = "BMI", y = "Glucose after 120mins")
+  labs(title = "Fig14: Statistical Summary of Fasting Glucose by BMI Categories", x = "BMI", y = "Glucose after 120mins")
 ```
+
 
 Conclusion:
 Based on the above data exploration and graphs, no clear pattern shows that UPF consumption is associated with obesity or T2DM. One reason can be the number of participants is limited. 
