--- a/index.Rmd
+++ b/index.Rmd
@@ -68,23 +68,13 @@ opts_chunk$set(
 <br>
 
 ## Data Analysis and Visualization of Primary Research Interest (Obesity)
-## First Step
-
-Firstly, I sourced codes from "Midterm.R".
 
 ```{r load-data}
 source("Midterm.R")
 ```
 
-<br>
-
-## Second Step
-
-Secondly, I copied and pasted codes needed from source.
-
 ```{r fig1 to fig3}
-fig1 <- 
-ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) + 
+fig1 <- ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) + 
   geom_point() +
   labs(title = "Fig1: Scatterplot of UPF vs. BMI", x = "UPF%", y = "BMI") +
   geom_smooth(method = lm, se = FALSE)
@@ -95,9 +85,9 @@ fig2 <- ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) +
   labs(title = "Fig2: Smooth the lineplot of UPF vs. BMI", x = "UPF%", y = "BMI") 
 
 fig3 <- vars %>%
-  ggplot(aes(x = BMI_cont, fill = UPF_quart)) +
+  ggplot(aes(x = BMI_cont, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig3: BMI by UPF Quartiles", x = "BMI", fill = "UPF Quartile")
+  labs(title = "Fig3: BMI by Sex", x = "BMI", fill = "Sex")
 
 fig4 <- vars %>%
   ggplot(aes(x = UPF_BMI, fill = UPF_quart)) +
