--- a/Final.Rmd
+++ b/Final.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Final" 
+title: "Midterm" 
 author: "Yiping Li"
 output: github_document
 date: "`r Sys.Date()`" 
@@ -158,7 +158,7 @@ table4 <- vars %>%
 knitr::kable(table4)
 ```
 
-Figure 1 to 3 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. None of the plots show a trend of UPF% on those variables interested in. 
+Figure 1 to 6 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. None of the plots show a trend of UPF% on those variables interested in. 
 
 ```{r, scatterplots and smoothed slineplots of UPF_cont vs BMI_cont, Gluc_Fasting, Gluc_120min}
 
@@ -170,78 +170,101 @@ ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) +
 ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) + 
   geom_line () +
   geom_smooth () +
-  labs(title = "Fig1: Smooth Lineplot of UPF vs. BMI", x = "UPF%", y = "BMI") 
+  labs(title = "Fig2: Smooth the lineplot of UPF vs. BMI", x = "UPF%", y = "BMI") 
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_point() +
-  labs(title = "Fig2: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose") + 
+  labs(title = "Fig3: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose") + 
   geom_smooth(method = lm, se = FALSE)
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_line () +
   geom_smooth () +
-  labs(title = "Fig2: Smooth Lineplot of UPF vs. Fasting Glucose", x = "UPF%", y = "BMI") 
+  labs(title = "Fig4: Smooth the lineplot of UPF vs. Fasting Glucose", x = "UPF%", y = "BMI") 
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_120min)) + 
   geom_point() +
-  labs(title = "Fig3: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") +
+  labs(title = "Fig5: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") +
   geom_smooth(method = lm, se = FALSE)
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_line () +
   geom_smooth () +
-  labs(title = "Fig3: Smooth Lineplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") 
+  labs(title = "Fig6: Smooth the lineplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") 
 
 ```
 
-Figure 4 BMI by UPF consumption shows that subjects who consumed 0-25% UPF had a pattern with right skewed, while subjects who comsumed greater than 25% UPF showed no specific pattern. 
+Figure 7 fasting glucose by UPF quartiles shows that most subjects consumed 0-25% UPF and the second most subjects consumed 25-50% UPF. However, both UPF amounts consumption show no pattern for fasting flucose, which is also not normally distributed. This figure does not show any association between fasting glucose and UPF consumption. 
 
-```{r, histogram, BMI by UPF quartiles }
-vars %>%
-  ggplot(aes(x = BMI_cont, fill = as.factor(Male))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig4: BMI by Sex", x = "BMI", fill = "Sex")
-  
-```
-
-Figure 5 fasting glucose by UPF quartiles shows that most subjects consumed 0-25% UPF and the second most subjects consumed 25-50% UPF. However, both UPF amounts consumption show no pattern for fasting flucose, which is also not normally distributed. This figure does not show any association between fasting glucose and UPF consumption. 
-
-Figure 6 Blood Glucose after 120 minutes shows that subjects consumed 0-25% and 25-50% UPF are almost normally distributed for their blood glucose level after 120 minutes. However, this figure also shows no association between blood glucose after 120 minutes and UPF consumption. 
+Figure 8 Blood Glucose after 120 minutes shows that subjects consumed 0-25% and 25-50% UPF are almost normally distributed for their blood glucose level after 120 minutes. However, this figure also shows no association between blood glucose after 120 minutes and UPF consumption. 
 
 ```{r, histogram, glu-fasting/120mins by UPF_quart}
 vars %>%
   ggplot(aes(x = Gluc_Fasting, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig5: Fasting Glucose by Sex", x = "Fasting Glucose", fill = "Sex")
+  labs(title = "Fig7: Fasting Glucose by Sex", x = "Fasting Glucose", fill = "Sex")
 
 vars %>%
   ggplot(aes(x = Gluc_120min, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig6: Blood Glucose after 120mins by Sex", x = "Blood Glucose after 120mins", fill = "Sex")
+  labs(title = "Fig8: Blood Glucose after 120mins by Sex", x = "Blood Glucose after 120mins", fill = "Sex")
   
 ```
 
-The barchart Figure 7 shows in another way that most subjects consumed low amount of UPFs were either overweight or obese. 
+Figure 9 BMI by UPF consumption shows that subjects who consumed 0-25% UPF had a pattern with right skewed, while subjects who comsumed greater than 25% UPF showed no specific pattern. 
+
+```{r, histogram, BMI by UPF quartiles }
+vars %>%
+  ggplot(aes(x = BMI_cont, fill = as.factor(Male))) +
+  geom_histogram(position = "identity", alpha = 0.5) +
+  labs(title = "Fig9: BMI by Sex", x = "BMI", fill = "Sex")
+  
+```
+
+The barchart Figure 10 shows in another way that most subjects consumed low amount of UPFs were either overweight or obese. 
 
 ```{r, barchart, UPF_BMI by UPF_quart, cont}
 vars %>%
   ggplot(aes(x = UPF_BMI, fill = UPF_quart)) +
   geom_bar() +
-  labs(title = "Fig7: UPF binary and BMI combined by UPF Quartile", x = "UPF_BMI", fill = "UPF Quartile")
+  labs(title = "Fig10: UPF binary and BMI combined by UPF Quartile", x = "UPF_BMI", fill = "UPF Quartile")
 
 ```
 
-Figure 8 to Figure 14 are the statistical summary graphs of fasting glucose or blood glucose after 120 minutes by UPF quartiles of BMI. 
+Figure 11 to Figure 14 are the statistical summary graphs of fasting glucose or blood glucose after 120 minutes by UPF quartiles of BMI. 
 
 ```{r, statistical summary graph, glu-fasting/120mins by UPF_quart and BMI}
 vars %>%
   ggplot() +
-  stat_summary(mapping = aes(x = BMI_cat, y = UPFpercentage_mean),
+  stat_summary(mapping = aes(x = UPF_quart, y = Gluc_Fasting),
                fun.min = min,
                fun.max = max, 
                fun = median) + 
-  labs(title = "Fig8: Statistical Summary of UPF% by BMI Categories", x = "BMI", y = "UPF%")
+  labs(title = "Fig11: Statistical Summary of Fasting GLucose by UPF Quartiles", x = "UPF Quartiles", y = "Fasting Glucose")
 
+vars %>%
+  ggplot() +
+  stat_summary(mapping = aes(x = UPF_quart, y = Gluc_120min),
+               fun.min = min,
+               fun.max = max, 
+               fun = median) + 
+  labs(title = "Fig12: Statistical Summary of Glucose after 120mins by UPF Quartiles", x = "UPF Quartiles", y = "Glucose after 120mins")
+
+vars %>%
+  ggplot() +
+  stat_summary(mapping = aes(x = BMI_cat, y = Gluc_Fasting),
+               fun.min = min,
+               fun.max = max, 
+               fun = median) + 
+  labs(title = "Fig13: Statistical Summary of Fasting GLucose by BMI Categories", x = "BMI", y = "Fasting Glucose")
+
+vars %>%
+  ggplot() +
+  stat_summary(mapping = aes(x = BMI_cat, y = Gluc_120min),
+               fun.min = min,
+               fun.max = max, 
+               fun = median) + 
+  labs(title = "Fig14: Statistical Summary of Fasting Glucose by BMI Categories", x = "BMI", y = "Glucose after 120mins")
 ```
 
 
