--- a/Final.Rmd
+++ b/Final.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Midterm" 
+title: "Final" 
 author: "Yiping Li"
 output: github_document
 date: "`r Sys.Date()`" 
@@ -15,15 +15,13 @@ library(ggplot2)
 ```
 
 Introduction: 
-In the United States, more than half of the total dietary energy consumption has been composed by ultra-processed foods (UPFs). Most UPFs are calorie-dense and high in sugar, salt, and unhealthy fats, while low in protein, vitamins, and minerals. Studies have demonstrated that the increased consumption of UPFs could result in a poor nutritional quality of the overall diet and high chances of developing chronic diseases. Therefore, the aim of the study focuses on exploring the association between UPF consumption and type 2 diabetes (T2DM) and obesity among youth. 
+In the United States, more than half of the total dietary energy consumption has been composed by ultra-processed foods (UPFs). Most UPFs are calorie-dense and high in sugar, salt, and unhealthy fats, while low in protein, vitamins, and minerals. Studies have demonstrated that the increased consumption of UPFs could result in a poor nutritional quality of the overall diet and high chances of developing chronic diseases. Therefore, the aim of the study focuses on exploring the association between UPF consumption and obesity, which is the primary study interest, and type 2 diabetes (T2DM) among young adults, using data obtained from the Children’s Health Study (CHS).
 
 Method: 
-The data used were obtained from the baseline visit (between 2014 and 2018) of the Children's Health Study, which contained 158 participants aging from 17 to 22 years old. The 24-hour recall was used to obtain the food items that participants consumed and to further calculate the UPF consumption percentage (UPF%), which equaled to the UPF consumption amount in grams divided by total food consumption amount in grams. A total of 155 participants had appropriate UPF% were included in the study. After exclude participants who did not have T2DM related variables and implausible blood glucose levels, a total of 153 participants were being studied. 
-Demographic variables, BMI, UPF%, and T2DM related variables (fasting glucose, blood glucose after 120 minutes, and HbA1c) were included in this particular study. 
+UPF Classification
+In this study, UPFs are defined as food items that go through multiple manipulated process before people purchase or eat them. A total of 1167 food items (including ingredients) were collected at baseline visit and a total of 807 food items were collected were collected at follow-up visit using the 24-hour dietary recalls (24HRs). Two reviewers conducted following two processes independently. Firstly, reviewers used NOVA classification to group food items into 4 groups: unprocessed and minimally processed foods, processed culinary ingredients, processed foods, and ultra-processed foods (UPFs). Secondly, reviewers grouped the first 3 groups into non-UPFs group, so only two groups were resulted. After grouping, reviewers had disagreements on food item classification, reviewers share own perspectives to seek an agreement. In general, UPF classification criteria were as following: the major ingredient of a food item; how the food is made in the U.S. normally; the way most people get the food – purchase from a grocery store or homemade.
 
-*Ultra-Processed Food Definition and Classification
-Ultra-processed foods are defined as food items that go through multiple manipulated process before people purchase or eat them. A total of 1167 food items (including ingredients) were collected at baseline visit and a total of 807 food items were collected were collected at follow-up visit using 24-hour dietary recalls (24HRs). Two reviewers conducted following two processes independently. Firstly, reviewers used NOVA classification to group food items into 4 groups: unprocessed and minimally processed foods, processed culinary ingredients, processed foods, and ultra-processed foods (UPFs). Secondly, reviewers grouped the first 3 groups into non-UPFs group, so only two groups were resulted. After grouping, reviewers had disagreements on food item classification, reviewers share own perspectives to seek an agreement. In general, UPF classification criteria were as following: the major ingredient of a food item; how the food is made in the U.S. normally; the way most people get the food – purchase from a grocery store or homemade. 
-
+The data used were obtained from the baseline visit (between 2014 and 2018) of the CHS, which contained 158 participants aging from 17 to 22 years old. The 24-hour dietary recall was used to obtain the food items that participants consumed and to further calculate the UPF consumption percentage (UPF%). The inclusion criteria of participants were successfully completing the 24-hour dietary recall, BMI measurement, and glucose measurements. UPF% equaled to the UPF consumption amount in grams divided by total food consumption amount in grams. Demographic variables, body mass index (BMI), UPF%, and T2DM related variables (fasting glucose, blood glucose after 120 minutes, and HbA1c) were included in this study. BMI was used as the reference of obesity, and fasting glucose and blood glucose after 120 minutes were used as references of T2DM. 
 
 ```{r, import raw data}
 metaair <- readRDS("/Users/yiping/Desktop/Epi research/OneDrive - University of Southern California/MetaChem/metaair.rds")
@@ -39,14 +37,14 @@ subsetmetachem <- metaair[myvars]
 vars <- merge(subsetmetachem, UPFMean_grams)
 ```
 
-To better apply the numeric variable, the UPF%, was used to create 2 categorical variables. The first one was UPF quartiles, which was created by evenly cut the UPF% into 4 groups. The second one was a binary UPF variable, which was created by assuming those who consumed less than 75% of UPFs as low UPF consumption group and the rest as high UPF consumption group. 
+To better apply the numeric variable (the UPF%) in the study, the author created 2 categorical UPF% variables. The first one has 4 groups, which was created by evenly dividing the UPF% into 4 groups. The second one was a binary UPF variable, which was created by assuming those who consumed less than 50% of UPFs as low UPF consumption group and the rest as high UPF consumption group. 
 
 ```{r, data wrangling: make numeric variables into categorical variables}
-vars$UPF_quart <- cut(vars$UPFpercentage_mean,
+vars$UPF_cat <- cut(vars$UPFpercentage_mean,
                           breaks=c(0, 25, 50, 75, 100),
                           labels=c("1", "2", "3", "4"))
 
-vars$UPF_cat <- cut(vars$UPFpercentage_mean,
+vars$UPF_binary <- cut(vars$UPFpercentage_mean,
                              breaks=c(0, 50, 100),
                              labels=c("0", "1"))
 ```
@@ -65,13 +63,14 @@ names(vars)[9] <- "Gluc_120min"
 names(vars)[10] <- "HbA1C"
 ```
 
+To better use the numeric variable, sex, I changed the format of it into a categorical variable to give proper names of the groups in it. 
+
 ```{r, data wrangling: rename sex categories}
 vars$Male <- as.factor(vars$Male)
 vars$Male <- revalue(vars$Male, c("0" = "Female", "1" = "Male"))
 ```
 
-
-Participants with missing values in T2DM or fasting glucose or blood glucose after 120 minutes were excluded. Participants with implausible fasting glucose of greater than 200 mg/dL and glucose after 120 minutes of greater than 400 mg/dL were also excluded. 
+Participants with missing values in T2DM or fasting glucose or blood glucose after 120 minutes were excluded. Participants with implausible fasting glucose of greater than 200 mg/dL and blood glucose after 120 minutes of greater than 400 mg/dL were also excluded.
 
 ```{r, EDA, check for missing values, T2DM related all contain 1 missing variable, get rid of 1 outlier}
 vars <- vars %>%
@@ -82,46 +81,32 @@ vars <- vars %>%
   filter(Gluc_120min < 400)
 ```
 
-A categorical variable, UPF and BMI, that contained all cases of the UPF binary variable and BMI categories conbination was created to explore the association between UPF consumption and BMI. 
+A new categorical variable (names as “UPF and BMI”), that contained all cases of the UPF binary variable and 3 BMI categories combination was created to explore the association between UPF consumption and BMI. 
 
 ```{r, for barchart, glu_fasting/120mins by UPFcat+BMI}
 vars <- vars %>%
   mutate(UPF_BMI = factor(
-    case_when(UPF_cat == 0 & BMI_cat == "Normal" ~ "Low UPF Normal Weight",
-              UPF_cat == 0 & BMI_cat == "Overweight" ~ "Low UPF Overweight",
-              UPF_cat == 0 & BMI_cat == "Obese" ~ "Low UPF Obese",
-              UPF_cat == 1 & BMI_cat == "Normal" ~ "High UPF Normal Weight",
-              UPF_cat == 1 & BMI_cat == "Overweight" ~ "High UPF Overweight",
-              UPF_cat == 1 & BMI_cat == "Obese" ~ "High UPF Obese")
+    case_when(UPF_binary == 0 & BMI_cat == "Normal" ~ "Low UPF Normal Weight",
+              UPF_binary == 0 & BMI_cat == "Overweight" ~ "Low UPF Overweight",
+              UPF_binary == 0 & BMI_cat == "Obese" ~ "Low UPF Obese",
+              UPF_binary == 1 & BMI_cat == "Normal" ~ "High UPF Normal Weight",
+              UPF_binary == 1 & BMI_cat == "Overweight" ~ "High UPF Overweight",
+              UPF_binary == 1 & BMI_cat == "Obese" ~ "High UPF Obese")
   ))
 
 vars<- vars %>%
   filter(!is.na(UPF_BMI))
 ```
 
-Scatterplots of UPF% on BMI, fasting glucose, and blood glucose after 120 minutes were created. Histograms of fasting glucose by UPF quartiles and blood glucose after 120 minutes by UPF quartiles were created. In addition, histograms of fasting glucose by UPF quartiles and blood glucose after 120 minutes by BMI were created.  
+Tables were created for readers to understand the numeric values of study of interests. Summaries tables of fasting glucose and blood glucose after 120 minutes containing total numbers, minimum values, and maximum values in regard to UPF 4 groups, UPF binary variable, and BMI categories were created. The summary table of number of subjects for each “UPF and BMI” combination was also created. 
 
-Results: 
-Table 1 shows the minimum and the maximum fasting glucose and blood glucose after 120 minutes, and the number of subjects by UPF quartiles. Most subjects consomed 0-25% of UPFs, and the number of subjects decreases as the percentage of UPF consumption increases. 
+Different kinds of plots were created for readers to visualize the exposure and outcomes in the study. Smooth lineplots of UPF% vs. BMI, fasting glucose, and blood glucose after 120 minutes were created. Histograms of BMI, fasting glucose, and blood glucose after 120 minutes by sex were created. A barchart of the combination of UPF% and BMI by UPF% 4 groups and a statistical summary graph of UPF% by BMI were also created. 
 
-```{r, summary table glu-fasting and glu120min vs UPF_quart}
+Table 1 to 3 are descriptive tables showing the number of participants, the minimum and maximum vales of fasting glucose and blood glucose after 120 minutes. Most participants were overweight obese and ate less than 50% of UPFs. Only 4 participants ate UPF in 50-75% and only 1 participant ate UPF greater than 75%. 
+
+```{r, summary tables}
 table1 <- vars %>%
-  group_by(UPF_quart) %>%
-  summarise(
-    Gluc_Fasting_min = min(Gluc_Fasting),
-    Gluc_Fasting_max = max(Gluc_Fasting),
-    Gluc_120min_min = min(Gluc_120min),
-    Gluc_120min_max = max(Gluc_120min),
-    Gluc_num = n(),
-  )
-knitr::kable(table1)
-```
-
-Table 2 shows the minimum and the maximum fasting glucose and blood glucose after 120 minutes, and the number of subjects by UPF consumption in low or high groups. Only 1 subject falls into the high UPF consumption category. 
-
-```{r, summary table glu-fasting and glu120min vs UPF_cat}
-table2 <- vars %>%
-  group_by(UPF_cat) %>%
+  group_by(BMI_cat) %>%
   summarise(
     Gluc_Fasting_min = min(Gluc_Fasting),
     Gluc_Fasting_max = max(Gluc_Fasting),
@@ -129,14 +114,21 @@ table2 <- vars %>%
     GLuc_120min_max = max(Gluc_120min),
     Gluc_num = n(),
   )
+knitr::kable(table1)
+
+table2 <- vars %>%
+  group_by(UPF_cat) %>%
+  summarise(
+    Gluc_Fasting_min = min(Gluc_Fasting),
+    Gluc_Fasting_max = max(Gluc_Fasting),
+    Gluc_120min_min = min(Gluc_120min),
+    Gluc_120min_max = max(Gluc_120min),
+    Gluc_num = n(),
+  )
 knitr::kable(table2)
-```
 
-Table 3 shows the minimum and the maximum fasting glucose and blood glucose after 120 minutes, and the number of subjects by BMI. 
-
-```{r, summary table glu-fasting and glu120min vs. BMI}
 table3 <- vars %>%
-  group_by(BMI_cat) %>%
+  group_by(UPF_binary) %>%
   summarise(
     Gluc_Fasting_min = min(Gluc_Fasting),
     Gluc_Fasting_max = max(Gluc_Fasting),
@@ -147,9 +139,9 @@ table3 <- vars %>%
 knitr::kable(table3)
 ```
 
-Table 4 shows the number of subjects in each subgroup of the variable UPF and BMI. Only 1 subject who was overweight falls into the category of high UPF consumption. 
+Table 4 combines the circumstances of UPF consumption and BMI categories, indicating that most participants ate low UPF in their diet and were overweight or obese. 
 
-```{r, summary table UPF_BMI numbers in each subgroup}
+```{r, summary table UPF_BMI numbers in each combination}
 table4 <- vars %>%
   group_by(UPF_BMI) %>%
   summarise(
@@ -158,7 +150,7 @@ table4 <- vars %>%
 knitr::kable(table4)
 ```
 
-Figure 1 to 6 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. None of the plots show a trend of UPF% on those variables interested in. 
+Figure 1 to 3 shows UPF% vs BMI, fasting glucose, and blood glucose after 120 minutes correspondingly. No clear patten between UPF% and those variables interested in is seen from those figures. 
 
 ```{r, scatterplots and smoothed slineplots of UPF_cont vs BMI_cont, Gluc_Fasting, Gluc_120min}
 
@@ -170,103 +162,77 @@ ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) +
 ggplot(vars, aes(x = UPFpercentage_mean, y = BMI_cont)) + 
   geom_line () +
   geom_smooth () +
-  labs(title = "Fig2: Smooth the lineplot of UPF vs. BMI", x = "UPF%", y = "BMI") 
+  labs(title = "Fig1: Smooth Lineplot of UPF vs. BMI", x = "UPF%", y = "BMI") 
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_point() +
-  labs(title = "Fig3: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose") + 
+  labs(title = "Fig2: Scatterplot of UPF vs. Fasting Glucose", x = "UPF%", y = "Fasting Glucose") + 
   geom_smooth(method = lm, se = FALSE)
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_line () +
   geom_smooth () +
-  labs(title = "Fig4: Smooth the lineplot of UPF vs. Fasting Glucose", x = "UPF%", y = "BMI") 
+  labs(title = "Fig2: Smooth Lineplot of UPF vs. Fasting Glucose", x = "UPF%", y = "BMI") 
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_120min)) + 
   geom_point() +
-  labs(title = "Fig5: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") +
+  labs(title = "Fig3: Scatterplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") +
   geom_smooth(method = lm, se = FALSE)
 
 ggplot(vars, aes(x = UPFpercentage_mean, y = Gluc_Fasting)) + 
   geom_line () +
   geom_smooth () +
-  labs(title = "Fig6: Smooth the lineplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") 
+  labs(title = "Fig3: Smooth Lineplot of UPF vs. Blood Glucose after 120 minutes", x = "UPF%", y = "Blood Glucose after 120 minutes") 
 
 ```
 
-Figure 7 fasting glucose by UPF quartiles shows that most subjects consumed 0-25% UPF and the second most subjects consumed 25-50% UPF. However, both UPF amounts consumption show no pattern for fasting flucose, which is also not normally distributed. This figure does not show any association between fasting glucose and UPF consumption. 
-
-Figure 8 Blood Glucose after 120 minutes shows that subjects consumed 0-25% and 25-50% UPF are almost normally distributed for their blood glucose level after 120 minutes. However, this figure also shows no association between blood glucose after 120 minutes and UPF consumption. 
-
-```{r, histogram, glu-fasting/120mins by UPF_quart}
-vars %>%
-  ggplot(aes(x = Gluc_Fasting, fill = as.factor(Male))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig7: Fasting Glucose by Sex", x = "Fasting Glucose", fill = "Sex")
-
-vars %>%
-  ggplot(aes(x = Gluc_120min, fill = as.factor(Male))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig8: Blood Glucose after 120mins by Sex", x = "Blood Glucose after 120mins", fill = "Sex")
-  
-```
-
-Figure 9 BMI by UPF consumption shows that subjects who consumed 0-25% UPF had a pattern with right skewed, while subjects who comsumed greater than 25% UPF showed no specific pattern. 
+Figure 4, BMI by sex, shows that males have a right skewed distribution while females do not. 
 
 ```{r, histogram, BMI by UPF quartiles }
 vars %>%
   ggplot(aes(x = BMI_cont, fill = as.factor(Male))) +
   geom_histogram(position = "identity", alpha = 0.5) +
-  labs(title = "Fig9: BMI by Sex", x = "BMI", fill = "Sex")
+  labs(title = "Fig4: BMI by Sex", x = "BMI", fill = "Sex")
   
 ```
 
-The barchart Figure 10 shows in another way that most subjects consumed low amount of UPFs were either overweight or obese. 
+Figure 5, UPF% by sex, shows that both males and females have right skewed bell shapes, and males have high UPF%. Figure 6, UPF% by BMI, straightly shows that more participants were overweight and consumed less than 40% UPFs.
 
-```{r, barchart, UPF_BMI by UPF_quart, cont}
+```{r, histogram, glu-fasting/120mins by UPF_quart}
 vars %>%
-  ggplot(aes(x = UPF_BMI, fill = UPF_quart)) +
-  geom_bar() +
-  labs(title = "Fig10: UPF binary and BMI combined by UPF Quartile", x = "UPF_BMI", fill = "UPF Quartile")
+  ggplot(aes(x = UPFpercentage_mean, fill = Male)) +
+  geom_histogram(position = "identity", alpha = 0.5) +
+  labs(title = "Fig5: UPF% by Sex", x = "UPF%", fill = "Sex")
+
+vars %>%
+  ggplot(aes(x = UPFpercentage_mean, fill = BMI_cat)) +
+  geom_histogram(position = "identity", alpha = 0.5) +
+  labs(title = "Fig6: UPF% by BMI", x = "UPF%", fill = "BMI")
 
 ```
 
-Figure 11 to Figure 14 are the statistical summary graphs of fasting glucose or blood glucose after 120 minutes by UPF quartiles of BMI. 
+Figure 7 shows Table 4 in a visualized way, but it does not indicate any association between UPF plus BMI and UPF 4 categories.
+
+```{r, barchart, UPF_BMI by UPF_quart, cont}
+vars %>%
+  ggplot(aes(x = UPF_BMI, fill = UPF_cat)) +
+  geom_bar() +
+  labs(title = "Fig7: UPF binary and BMI combined by UPF Categories", x = "UPF_BMI", fill = "UPF Categories")
+
+```
+
+Figure 8 shows the primary outcome of interest BMI in regard to UPF%. Participants consumed more UPF were overweight instead of obese, suggesting no association between UPF% and obesity, indicating by BMI categories. 
 
 ```{r, statistical summary graph, glu-fasting/120mins by UPF_quart and BMI}
 vars %>%
   ggplot() +
-  stat_summary(mapping = aes(x = UPF_quart, y = Gluc_Fasting),
+  stat_summary(mapping = aes(x = BMI_cat, y = UPFpercentage_mean),
                fun.min = min,
                fun.max = max, 
                fun = median) + 
-  labs(title = "Fig11: Statistical Summary of Fasting GLucose by UPF Quartiles", x = "UPF Quartiles", y = "Fasting Glucose")
+  labs(title = "Fig8: Statistical Summary of UPF% by BMI Categories", x = "BMI", y = "UPF%")
 
-vars %>%
-  ggplot() +
-  stat_summary(mapping = aes(x = UPF_quart, y = Gluc_120min),
-               fun.min = min,
-               fun.max = max, 
-               fun = median) + 
-  labs(title = "Fig12: Statistical Summary of Glucose after 120mins by UPF Quartiles", x = "UPF Quartiles", y = "Glucose after 120mins")
-
-vars %>%
-  ggplot() +
-  stat_summary(mapping = aes(x = BMI_cat, y = Gluc_Fasting),
-               fun.min = min,
-               fun.max = max, 
-               fun = median) + 
-  labs(title = "Fig13: Statistical Summary of Fasting GLucose by BMI Categories", x = "BMI", y = "Fasting Glucose")
-
-vars %>%
-  ggplot() +
-  stat_summary(mapping = aes(x = BMI_cat, y = Gluc_120min),
-               fun.min = min,
-               fun.max = max, 
-               fun = median) + 
-  labs(title = "Fig14: Statistical Summary of Fasting Glucose by BMI Categories", x = "BMI", y = "Glucose after 120mins")
 ```
 
-
 Conclusion:
-Based on the above data exploration and graphs, no clear pattern shows that UPF consumption is associated with obesity or T2DM. One reason can be the number of participants is limited. 
+Based on the above data exploration and graphs, no clear pattern shows that UPF consumption is associated with obesity or T2DM, indicating by BMI categories and blood glucose. One reason can be the number of participants is limited. The other reason might be limited outcomes of interests to study. Only 3 variables were used to make tables and figures to visualize. Although this study does not any association between UPF consumption and obesity and T2DM, further studies are needed to explore any potential relationships between UPFs and metabolic diseases.
